<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTopIngreso"
        android:text="@string/ingName"
        android:textSize="@dimen/tamanioIngre"
        android:textColor="@color/colorTextNegro"
        ></TextView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/EtxtName"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:hint="@string/labelUno"
        android:inputType="text"
        android:textSize="@dimen/tamanioInputs"></EditText>
</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/labelFecha"
        android:textSize="@dimen/tamanioIngre"
        android:textColor="@color/colorTextNegro"
        ></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <EditText
        android:id="@+id/seFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:maxLines="1"
        android:layout_marginTop="@dimen/marginTop"
        android:hint="@string/ingFecha"
        android:textSize="@dimen/tamanioInputs"
        android:textColor="@color/colorTextNegro"
        ></EditText>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/labelGenero"
        android:textSize="@dimen/tamanioIngre"
        android:textColor="@color/colorTextNegro"
        ></TextView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:textSize="@dimen/tamanioIngre" />

</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/labelPrecio"
        android:textSize="@dimen/tamanioIngre"
        android:textColor="@color/colorTextNegro"
        ></TextView>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
        android:id="@+id/EvalorEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/labelValor"
        android:textSize="@dimen/tamanioInputs"
        android:layout_weight="1" />
</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop"
        android:text="@string/labelCasificacion"
        android:textSize="@dimen/tamanioIngre"
        android:textColor="@color/colorTextNegro"
        ></TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Spinner
            android:id="@+id/spinnerDos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTop"
            android:textSize="@dimen/tamanioIngre" />

    </LinearLayout>


    <Button
        android:id="@+id/agregarBtn"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="@dimen/marginTopBase"
        android:background="@color/colorCompleTres"
        android:text="Agregar"
        android:textAllCaps="false"
        android:textColor="@color/colorTextNegro"
        android:textSize="@dimen/tamanioIngre"></Button>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <ListView
        android:id="@+id/listarEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></ListView>
</LinearLayout>
</LinearLayout>